--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/MainWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/MainWindow.xaml
@@ -21,7 +21,7 @@
 
         <StackPanel Grid.Column="0" Orientation="Vertical">
             <TextBlock Text="Создание заказ-нарядов" VerticalAlignment="Center" FontSize="10"/>
-            <Button Content="Ферезерный центр" Margin="0,6,0,0"/>
+            <Button Content="Фрезерный центр" Margin="0,6,0,0"/>
             <Button Content="Лаборатория" Margin="0,6,0,0"/>
 
             <TextBlock Text="Работа с данными" VerticalAlignment="Center" Margin="0,24,0,0" FontSize="10"/>
