--- a/src/Germadent.Rma.App/Germadent.Rma.App/App.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Germadent.Rma.App"
+             xmlns:converters="clr-namespace:Germadent.UI.Converters;assembly=Germadent.UI"
              ShutdownMode="OnExplicitShutdown"
              Startup="App_OnStartup"
              Exit="App_OnExit">
@@ -14,7 +15,10 @@
                 <ResourceDictionary Source="pack://application:,,,/Germadent.UI;component/Theme/ListBoxDictionary.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/Germadent.UI;component/Theme/TextBoxDictionary.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/Germadent.UI;component/Theme/TextBlockDictionary.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Germadent.UI;component/Theme/DatePickerDictionary.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+
+            <converters:EnumToBoolConverter x:Key="EnumToBoolConverter"/>
 
             <Style TargetType="{x:Type Button}" BasedOn="{StaticResource StlnButtonStyle}"/>
             <Style TargetType="{x:Type RadioButton}" BasedOn="{StaticResource StlnRadioButtonStyle}"/>
@@ -22,6 +26,7 @@
             <Style TargetType="{x:Type DataGrid}" BasedOn="{StaticResource StlnDataGridStyle}"/>
             <Style TargetType="{x:Type ListBox}" BasedOn="{StaticResource StlnListBoxStyle}"/>
             <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource StlnTextBoxStyle}"/>
+            <Style TargetType="{x:Type DatePicker}" BasedOn="{StaticResource StlnDatePickerStyle}"/>
            
         </ResourceDictionary>
     </Application.Resources>
