--- a/src/Germadent.Rma.App/Germadent.Rma.App/App.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Germadent.Rma.App"
-             xmlns:converters="clr-namespace:Germadent.UI.Converters;assembly=Germadent.UI"
+             xmlns:convertersUI="clr-namespace:Germadent.UI.Converters;assembly=Germadent.UI"
+             xmlns:converters="clr-namespace:Germadent.Rma.App.Converters"
              ShutdownMode="OnExplicitShutdown"
              Startup="App_OnStartup"
              Exit="App_OnExit">
@@ -18,7 +19,8 @@
                 <ResourceDictionary Source="pack://application:,,,/Germadent.UI;component/Theme/DatePickerDictionary.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
-            <converters:EnumToBoolConverter x:Key="EnumToBoolConverter"/>
+            <convertersUI:EnumToBoolConverter x:Key="EnumToBoolConverter"/>
+            <converters:BranchTypeToStringConverter x:Key="BranchTypeToStringConverter"/>
 
             <Style TargetType="{x:Type Button}" BasedOn="{StaticResource StlnButtonStyle}"/>
             <Style TargetType="{x:Type RadioButton}" BasedOn="{StaticResource StlnRadioButtonStyle}"/>
