--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/MillingCenterOrderWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/MillingCenterOrderWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:models="clr-namespace:Germadent.ServiceClient.Model;assembly=Germadent.ServiceClient"
+        xmlns:models="clr-namespace:Germadent.Rma.Model;assembly=Germadent.Rma.Model"
         xmlns:designMock="clr-namespace:Germadent.Rma.App.Views.DesignMock"
         xmlns:viewmodels="clr-namespace:Germadent.Rma.App.ViewModels"
         xmlns:usercontrols="clr-namespace:Germadent.Rma.App.Views.UserControls"
